<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtBoleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/boleto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtValorBol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBoleto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/valor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtVencimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtValorBol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/vencimento"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtInfoBol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVencimento"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/infoBoleto"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtCodBarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfoBol"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/codBarra"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnCopiarBol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCodBarra"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_resto"
        android:padding="10dp"
        android:text="@string/copiar" />

    <TextView
        android:id="@+id/InfoPagBol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCopiarBol"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:text="@string/infoPagBol"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout>