<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEvento"
            android:layout_width="266dp"
            android:layout_height="241dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@mipmap/evento_1" />


        <TextView
            android:id="@+id/txtNomeEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/evento"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtDataEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/data"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/txtInfoEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtComparIgresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/compIng"
            android:textSize="14sp" />



        <Button
            android:id="@+id/btnGerBol"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_resto"
            android:text="@string/gerarBoleto" />

    </LinearLayout>

</ScrollView>
