<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imgEvento"
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/txtNomeEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/evento"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDataEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/data"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtInfoEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/infoCod"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtCod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#D500FF0E"/>
    </LinearLayout>

</ScrollView>